--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,15 @@
 quarkus.index-dependency.elasticsearch.group-id=org.elasticsearch
 quarkus.index-dependency.elasticsearch.artifact-id=elasticsearch
 
+quarkus.http.host=localhost
+quarkus.http.port=8081
+
+quarkus.log.console.enable=true
+quarkus.log.console.level=DEBUG
+quarkus.log.console.format=%d{HH:mm:ss} %-5p [%c] (%t) %s%e%n
+quarkus.log.level=INFO
+quarkus.log.category."org.apache.http".level=DEBUG
+
 elasticsearch.hosts = http://localhost:9200
 elasticsearch.indexes = test
 elasticsearch.keyStorePath =
