--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,9 +11,15 @@ quarkus.log.console.level=DEBUG
 quarkus.log.console.format=%d{HH:mm:ss} %-5p [%c] (%t) %s%e%n
 quarkus.log.level=INFO
 quarkus.log.category."org.apache.http".level=DEBUG
+quarkus.log.category."org.jboss.pnc".level=DEBUG
 
 elasticsearch.hosts = http://localhost:9200
 elasticsearch.indexes = test
 elasticsearch.keyStorePath =
 elasticsearch.keyStorePass =
 elasticsearch.keyPass =
+
+bifrost.backoffrunnable.delayMillis = 1000
+bifrost.backoffrunnable.maxBackOffCycles = 10
+bifrost.backoffrunnable.timeOutMillis = 300000
+bifrost.backoffrunnable.pollIntervalMillis = 100
