Add default config values to application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,7 @@ bifrost.backoffrunnable.delayMillis = 1000
 bifrost.backoffrunnable.maxBackOffCycles = 10
 bifrost.backoffrunnable.timeOutMillis = 300000
 bifrost.backoffrunnable.pollIntervalMillis = 100
+
+bifrost.defaultSourceFetchSize = 100
+bifrost.maxSourceFetchSize = 1000
+bifrost.sourcePollThreads = 4
