--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,11 +10,12 @@ quarkus.log.console.enable=true
 quarkus.log.console.level=DEBUG
 quarkus.log.console.format=%d{HH:mm:ss} %-5p [%c] (%t) %s%e%n
 quarkus.log.level=INFO
-quarkus.log.category."org.apache.http".level=DEBUG
+quarkus.log.category."org.apache.http".level=INFO
+quarkus.log.category."org.elasticsearch".level=INFO
 quarkus.log.category."org.jboss.pnc".level=DEBUG
 
-elasticsearch.hosts = http://localhost:9200
-elasticsearch.indexes = test
+elasticsearch.hosts = https://host:443
+elasticsearch.indexes = test-*
 elasticsearch.keyStorePath =
 elasticsearch.keyStorePass =
 elasticsearch.keyPass =
