--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <version>0.1-SNAPSHOT</version>
   <properties>
     <surefire-plugin.version>2.22.0</surefire-plugin.version>
-    <quarkus.version>0.15.0</quarkus.version>
+    <quarkus.version>0.23.1</quarkus.version>
     <maven.compiler.source>1.8</maven.compiler.source>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.target>1.8</maven.compiler.target>
@@ -78,7 +78,7 @@
     </dependency>
     <dependency>
       <groupId>io.quarkus</groupId>
-      <artifactId>quarkus-smallrye-rest-client</artifactId>
+      <artifactId>quarkus-rest-client</artifactId>
       <scope>test</scope>
     </dependency>
     <!--<dependency>-->
