Do not return null line when therea are no hits.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ quarkus.http.port=8081
 
 quarkus.log.console.enable=true
 quarkus.log.console.level=DEBUG
-quarkus.log.console.format=%d{HH:mm:ss} %-5p [%c] (%t) %s%e%n
+quarkus.log.console.format=%d{HH:mm:ss,SSS} %-5p [%c] (%t) %s%e%n
 quarkus.log.level=INFO
 quarkus.log.category."org.apache.http".level=INFO
 quarkus.log.category."org.elasticsearch".level=INFO
