Update to Quarkus 1.1.0.Final.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,9 +16,9 @@ quarkus.log.category."org.jboss.pnc".level=DEBUG
 
 elasticsearch.hosts = https://host:443
 elasticsearch.indexes = test-*
-elasticsearch.keyStorePath =
-elasticsearch.keyStorePass =
-elasticsearch.keyPass =
+#elasticsearch.keyStorePath =
+#elasticsearch.keyStorePass =
+#elasticsearch.keyPass =
 
 bifrost.backoffrunnable.delayMillis = 1500
 bifrost.backoffrunnable.maxBackOffCycles = 10
