--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <version>0.1-SNAPSHOT</version>
   <properties>
     <surefire-plugin.version>2.22.2</surefire-plugin.version>
-    <quarkus.version>0.23.1</quarkus.version>
+    <quarkus.version>1.1.0.Final</quarkus.version>
     <maven.compiler.source>1.8</maven.compiler.source>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.target>1.8</maven.compiler.target>
@@ -36,21 +36,6 @@
         <artifactId>elasticsearch-rest-client</artifactId>
         <version>${version.elasticSearch}</version>
       </dependency>
-      <!--<dependency>-->
-        <!--<groupId>org.apache.httpcomponents</groupId>-->
-        <!--<artifactId>httpclient</artifactId>-->
-        <!--<version>4.5.2</version>-->
-      <!--</dependency>-->
-      <!--<dependency>-->
-        <!--<groupId>org.apache.httpcomponents</groupId>-->
-        <!--<artifactId>httpcore</artifactId>-->
-        <!--<version>4.4.5</version>-->
-      <!--</dependency>-->
-      <!--<dependency>-->
-        <!--<groupId>org.apache.httpcomponents</groupId>-->
-        <!--<artifactId>httpcomponents-core</artifactId>-->
-        <!--<version>4.4.5</version>-->
-      <!--</dependency>-->
     </dependencies>
   </dependencyManagement>
   <dependencies>
