--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -16,9 +16,9 @@ quarkus.log.category."org.jboss.pnc".level=TRACE
 
 elasticsearch.hosts = https://host:443
 elasticsearch.indexes = test-*
-elasticsearch.keyStorePath =
-elasticsearch.keyStorePass =
-elasticsearch.keyPass =
+#elasticsearch.keyStorePath =
+#elasticsearch.keyStorePass =
+#elasticsearch.keyPass =
 
 bifrost.backoffrunnable.delayMillis = 1000
 bifrost.backoffrunnable.maxBackOffCycles = 10
