--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,11 @@
       <artifactId>quarkus-undertow-websockets</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.jboss.pnc</groupId>
+      <artifactId>common</artifactId>
+      <version>1.7.5</version>
+    </dependency>
+    <dependency>
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-rest-client</artifactId>
       <scope>test</scope>
