Extract REST API.

--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,10 @@
     </dependency>
     <dependency>
       <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-smallrye-health</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
       <artifactId>quarkus-junit5</artifactId>
       <scope>test</scope>
     </dependency>
@@ -70,6 +74,11 @@
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-rest-client</artifactId>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.jboss.pnc</groupId>
+      <artifactId>pnc-api</artifactId>
+      <version>2.0-SNAPSHOT</version>
     </dependency>
     <!--<dependency>-->
       <!--<groupId>com.fasterxml.jackson.core</groupId>-->
@@ -244,4 +253,13 @@
       </build>
     </profile>
   </profiles>
+  <repositories>
+    <repository>
+      <id>jboss-org-snapshots</id>
+      <url>https://repository.jboss.org/nexus/content/repositories/snapshots/</url>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </repository>
+  </repositories>
 </project>
