--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,14 @@
     <elasticsearch.maven.plugin.version>6.10</elasticsearch.maven.plugin.version>
     <excludeTags>debug-test</excludeTags>
   </properties>
+
+  <scm>
+    <connection>scm:git:http://github.com/project-ncl/bitfrost.git</connection>
+    <developerConnection>scm:git:git@github.com:project-ncl/bitfrost.git</developerConnection>
+    <url>http://github.com/project-ncl/bitfrost</url>
+    <tag>HEAD</tag>
+  </scm>
+
   <dependencyManagement>
     <dependencies>
       <dependency>
@@ -218,6 +226,25 @@
               </execution>
           </executions>
       </plugin>
+          <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-release-plugin</artifactId>
+              <configuration>
+                  <tagNameFormat>@{project.version}</tagNameFormat>
+                  <autoVersionSubmodules>true</autoVersionSubmodules>
+              </configuration>
+           </plugin>
+           <plugin>
+              <groupId>org.sonatype.plugins</groupId>
+              <artifactId>nexus-staging-maven-plugin</artifactId>
+              <version>1.6.8</version>
+              <extensions>true</extensions>
+              <configuration>
+                  <serverId>ossrh</serverId>
+                  <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+                  <autoReleaseAfterClose>false</autoReleaseAfterClose>
+              </configuration>
+           </plugin>
     </plugins>
   </build>
   <profiles>
