--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <version.elasticSearch>5.6.15</version.elasticSearch>
     <elasticsearch.maven.plugin.version>6.10</elasticsearch.maven.plugin.version>
     <excludeTags>debug-test</excludeTags>
+    <tagSuffix/>
   </properties>
 
   <scm>
@@ -230,8 +231,9 @@
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-release-plugin</artifactId>
               <configuration>
-                  <tagNameFormat>@{project.version}</tagNameFormat>
-                  <autoVersionSubmodules>true</autoVersionSubmodules>
+                  <tagNameFormat>@{project.version}${tagSuffix}</tagNameFormat>
+		  <autoVersionSubmodules>true</autoVersionSubmodules>
+		  <stagingRepository>https://oss.sonatype.org/service/local/staging/deploy/maven2/</stagingRepository>
               </configuration>
            </plugin>
            <plugin>
