[maven-release-plugin] prepare release 1.0.0.RC1

--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.jboss.pnc.bifrost</groupId>
   <artifactId>bifrost-server</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.0.0</version>
   <properties>
     <surefire-plugin.version>2.22.2</surefire-plugin.version>
     <quarkus.version>1.2.1.Final</quarkus.version>
@@ -14,14 +13,14 @@
     <version.elasticSearch>5.6.15</version.elasticSearch>
     <elasticsearch.maven.plugin.version>6.10</elasticsearch.maven.plugin.version>
     <excludeTags>debug-test</excludeTags>
-    <tagSuffix/>
+    <tagSuffix />
   </properties>
 
   <scm>
     <connection>scm:git:http://github.com/project-ncl/bifrost.git</connection>
     <developerConnection>scm:git:git@github.com:project-ncl/bifrost.git</developerConnection>
     <url>http://github.com/project-ncl/bifrost</url>
-    <tag>HEAD</tag>
+    <tag>1.0.0.RC1</tag>
   </scm>
 
   <dependencyManagement>
