--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.jboss.pnc.bifrost</groupId>
   <artifactId>bifrost-server</artifactId>
-  <version>1.0.0</version>
+  <version>1.0.1-SNAPSHOT</version>
   <properties>
     <surefire-plugin.version>2.22.2</surefire-plugin.version>
     <quarkus.version>1.2.1.Final</quarkus.version>
@@ -20,7 +20,7 @@
     <connection>scm:git:http://github.com/project-ncl/bifrost.git</connection>
     <developerConnection>scm:git:git@github.com:project-ncl/bifrost.git</developerConnection>
     <url>http://github.com/project-ncl/bifrost</url>
-    <tag>1.0.0.RC1</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <dependencyManagement>
