expose metrics from bifrost service using micrometer model

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,5 @@ bifrost.backoffrunnable.pollIntervalMillis = 1000
 bifrost.defaultSourceFetchSize = 100
 bifrost.maxSourceFetchSize = 1000
 bifrost.sourcePollThreads = 4
+
+quarkus.micrometer.export.json.enabled = true
