--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
   </licenses>
   <properties>
     <surefire-plugin.version>2.22.2</surefire-plugin.version>
-    <quarkus.version>1.2.1.Final</quarkus.version>
+    <quarkus.version>1.10.3.Final</quarkus.version>
     <maven.compiler.source>11</maven.compiler.source>
     <maven.compiler.target>11</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -68,6 +68,10 @@
   </dependencyManagement>
   <dependencies>
     <dependency>
+      <groupId>org.jboss.logmanager</groupId>
+      <artifactId>log4j2-jboss-logmanager</artifactId>
+    </dependency>
+    <dependency>
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-resteasy</artifactId>
     </dependency>
@@ -102,6 +106,14 @@
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-rest-client</artifactId>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-micrometer</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.micrometer</groupId>
+      <artifactId>micrometer-registry-prometheus</artifactId>
     </dependency>
     <dependency>
       <groupId>org.jboss.pnc</groupId>
