--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <version.elasticSearch>5.6.15</version.elasticSearch>
     <elasticsearch.maven.plugin.version>6.10</elasticsearch.maven.plugin.version>
+    <quarkus.package.type>uber-jar</quarkus.package.type>
     <excludeTags>debug-test</excludeTags>
     <tagSuffix />
   </properties>
@@ -156,6 +157,7 @@
         <artifactId>quarkus-maven-plugin</artifactId>
         <version>${quarkus.version}</version>
         <configuration>
+          <finalName>bifrost</finalName>
           <ignoredEntries>
             <ignoredEntry>META-INF/ECLIPSE_.RSA</ignoredEntry>
             <ignoredEntry>META-INF/ECLIPSE_.SF</ignoredEntry>
