--- a/pom.xml
+++ b/pom.xml
@@ -151,7 +151,7 @@
     <dependency>
       <groupId>org.jboss.pnc</groupId>
       <artifactId>pnc-common</artifactId>
-      <version>2.2.0-SNAPSHOT</version>
+      <version>2.2.0</version>
     </dependency>
     <dependency>
       <groupId>com.thetransactioncompany</groupId>
