--- a/pom.xml
+++ b/pom.xml
@@ -193,6 +193,10 @@
       <artifactId>quarkus-logging-json</artifactId>
     </dependency>
     <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-opentelemetry-exporter-otlp</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.elasticsearch.client</groupId>
       <artifactId>elasticsearch-rest-high-level-client</artifactId>
       <version>${version.elasticSearch}</version>
