Add property to allow release to maven central
Otherwise staging plugin complains of no main jar found.
See: https://quarkusio.zulipchat.com/#narrow/stream/187030-users/topic/Quarkus.20app.20release.20on.20Maven.20Central for more details

--- a/pom.xml
+++ b/pom.xml
@@ -238,6 +238,8 @@
         <extensions>true</extensions>
         <configuration>
           <finalName>bifrost</finalName>
+          <!-- needed to publish to maven central -->
+          <skipOriginalJarRename>true</skipOriginalJarRename>
         </configuration>
         <executions>
           <execution>
