--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -48,10 +48,11 @@ quarkus:
   shutdown:
     timeout: 30
 
+  # [NCL-7901] Disable Opentelemetry for PNC 2.5
   opentelemetry:
-    enabled: true
+    enabled: false
     tracer:
-      enabled: true
+      enabled: false
       # reflect sampling on collector
       resource-attributes: "sampler_ratio=0.05,service.name=bifrost"
       sampler:
