--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
   <version>2.2.0-SNAPSHOT</version>
 
   <name>bifrost</name>
-  <description>Elasticsearch subscriptions service</description>
+  <description>Kafka subscriptions service</description>
   <url>https://github.com/bifrost</url>
   <inceptionYear>2019</inceptionYear>
 
@@ -45,9 +45,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <surefire-plugin.version>3.2.1</surefire-plugin.version>
-    <version.elasticSearch>5.6.15</version.elasticSearch>
     <quarkus.package.type>uber-jar</quarkus.package.type>
-    <elasticsearch.maven.plugin.version>6.23</elasticsearch.maven.plugin.version>
     <excludeTags>debug-test</excludeTags>
     <tagSuffix />
   </properties>
@@ -74,11 +72,6 @@
         <version>${quarkus.platform.version}</version>
         <type>pom</type>
         <scope>import</scope>
-      </dependency>
-      <dependency>
-        <groupId>org.elasticsearch.client</groupId>
-        <artifactId>elasticsearch-rest-client</artifactId>
-        <version>${version.elasticSearch}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
@@ -199,17 +192,6 @@
     <dependency>
       <groupId>io.opentelemetry</groupId>
       <artifactId>opentelemetry-context</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.elasticsearch.client</groupId>
-      <artifactId>elasticsearch-rest-high-level-client</artifactId>
-      <version>${version.elasticSearch}</version>
-      <exclusions>
-        <exclusion>
-          <groupId>org.apache.logging.log4j</groupId>
-          <artifactId>log4j-core</artifactId>
-        </exclusion>
-      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.projectlombok</groupId>
