Try to batch insert Kafka messages
And do one big commit at the end

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -110,3 +110,15 @@ bifrost:
       console:
         json: false
 
+mp:
+  messaging:
+    incoming:
+      logs:
+        connector: smallrye-kafka
+
+"%test":
+  mp:
+    messaging:
+      incoming:
+        logs:
+          connector: smallrye-kafka
