Enable usage of quarkus dev
Run it with:
```
DOCKER_HOST=unix:///run/user/${UID}/podman/podman.sock  TESTCONTAINERS_RYUK_DISABLED=true quarkus dev
```

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -128,4 +128,23 @@ bifrost:
     log:
       console:
         json: false
+    datasource:
+      db-kind: postgresql
+      #jdbc.url: ${QUARKUS_DATASOURCE_URL:}
+      username: quarkus
+      password: quarkus
+      devservices:
+        enabled: true
+    hibernate-orm:
+      database:
+        generation: drop-and-create
+  kafka2db:
+    accept-filters:
+      - logger-name-prefix: org.jboss.pnc
+        level: INFO
+    deny-filters:
+      - logger-name-prefix: org.jboss.pnc.bpm.eventlogger.ProcessProgressLogger
+    hostname: localhost-0
+  bifrost:
+    sourceClass: org.jboss.pnc.bifrost.source.db.DatabaseSource
 
