Migrate to resteasy-reactive
This will benefit us in the future with some good stuff like
RunOnVirtualThread

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -45,6 +45,10 @@ quarkus:
   http:
     host: localhost
     port: 8081
+    cors:
+      ~: true
+      origins: "/.*/"
+
   datasource:
     db-kind: ${QUARKUS_DATASOURCE:postgresql}
     jdbc.url: ${QUARKUS_DATASOURCE_URL:}
