Enable compression for resteasy classic
From: https://quarkus.io/version/2.16/guides/resteasy#gzip-support

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -45,10 +45,17 @@ quarkus:
   http:
     host: localhost
     port: 8081
-    # gzip replies
+    # gzip replies (only active for resteasy reactive)
     enable-compression: true
-    # accept gzipped uploaded data to Quarkus
+    # accept gzipped uploaded data to Quarkus (only active for resteasy reactive)
     enable-decompression: true
+  resteasy:
+    # gzip replies (only active for resteasy classic)
+    # https://quarkus.io/version/2.16/guides/resteasy#gzip-support
+    gzip:
+      enabled: true
+      max-input: 200M
+
   datasource:
     db-kind: ${QUARKUS_DATASOURCE:postgresql}
     jdbc.url: ${QUARKUS_DATASOURCE_URL:}
