--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -49,13 +49,9 @@ quarkus:
     enable-compression: true
     # accept gzipped uploaded data to Quarkus (only active for resteasy reactive)
     enable-decompression: true
-  resteasy:
-    # gzip replies (only active for resteasy classic)
-    # https://quarkus.io/version/2.16/guides/resteasy#gzip-support
-    gzip:
-      enabled: true
-      max-input: 200M
-
+    cors:
+      ~: true
+      origins: "/.*/"
   datasource:
     db-kind: ${QUARKUS_DATASOURCE:postgresql}
     jdbc.url: ${QUARKUS_DATASOURCE_URL:}
