--- a/pom.xml
+++ b/pom.xml
@@ -279,99 +279,105 @@
         </configuration>
       </plugin>
       <plugin>
-          <groupId>net.revelc.code.formatter</groupId>
-          <artifactId>formatter-maven-plugin</artifactId>
-          <version>2.24.1</version>
+          <groupId>com.diffplug.spotless</groupId>
+          <artifactId>spotless-maven-plugin</artifactId>
+          <version>2.43.0</version>
           <configuration>
-              <configFile>eclipse-codeStyle.xml</configFile>
+              <java>
+                  <removeUnusedImports />
+                  <eclipse>
+                      <file>eclipse-codeStyle.xml</file>
+                  </eclipse>
+                  <lineEndings>UNIX</lineEndings>
+              </java>
           </configuration>
           <executions>
               <execution>
-                  <id>java-format</id>
                   <goals>
-                      <goal>format</goal>
+                      <goal>apply</goal>
                   </goals>
+                  <phase>compile</phase>
               </execution>
           </executions>
       </plugin>
-          <plugin>
-              <groupId>org.apache.maven.plugins</groupId>
-              <artifactId>maven-release-plugin</artifactId>
-              <configuration>
-                  <tagNameFormat>@{project.version}${tagSuffix}</tagNameFormat>
-                  <autoVersionSubmodules>true</autoVersionSubmodules>
-                  <stagingRepository>https://oss.sonatype.org/service/local/staging/deploy/maven2/</stagingRepository>
-                  <releaseProfiles>release</releaseProfiles>
-                  <goals>deploy</goals>
-              </configuration>
-           </plugin>
-           <plugin>
-              <groupId>org.sonatype.plugins</groupId>
-              <artifactId>nexus-staging-maven-plugin</artifactId>
-              <version>1.7.0</version>
-              <extensions>true</extensions>
-              <configuration>
-                  <serverId>ossrh</serverId>
-                  <nexusUrl>https://oss.sonatype.org/</nexusUrl>
-                  <autoReleaseAfterClose>false</autoReleaseAfterClose>
-              </configuration>
-           </plugin>
-           <plugin>
-               <groupId>pl.project13.maven</groupId>
-               <artifactId>git-commit-id-plugin</artifactId>
-               <version>4.9.10</version>
-               <executions>
-                   <execution>
-                       <goals>
-                           <goal>revision</goal>
-                       </goals>
-                   </execution>
-               </executions>
+      <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-release-plugin</artifactId>
+          <configuration>
+              <tagNameFormat>@{project.version}${tagSuffix}</tagNameFormat>
+              <autoVersionSubmodules>true</autoVersionSubmodules>
+              <stagingRepository>https://oss.sonatype.org/service/local/staging/deploy/maven2/</stagingRepository>
+              <releaseProfiles>release</releaseProfiles>
+              <goals>deploy</goals>
+          </configuration>
+       </plugin>
+       <plugin>
+          <groupId>org.sonatype.plugins</groupId>
+          <artifactId>nexus-staging-maven-plugin</artifactId>
+          <version>1.7.0</version>
+          <extensions>true</extensions>
+          <configuration>
+              <serverId>ossrh</serverId>
+              <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+              <autoReleaseAfterClose>false</autoReleaseAfterClose>
+          </configuration>
+       </plugin>
+       <plugin>
+           <groupId>pl.project13.maven</groupId>
+           <artifactId>git-commit-id-plugin</artifactId>
+           <version>4.9.10</version>
+           <executions>
+               <execution>
+                   <goals>
+                       <goal>revision</goal>
+                   </goals>
+               </execution>
+           </executions>
 
-               <configuration>
-                   <!--
-                     If you'd like to tell the plugin where your .git directory is,
-                     use this setting, otherwise we'll perform a search trying to
-                     figure out the right directory. It's better to add it explicite IMHO.
-                   -->
-                   <dotGitDirectory>${project.basedir}/.git</dotGitDirectory>
+           <configuration>
+               <!--
+                 If you'd like to tell the plugin where your .git directory is,
+                 use this setting, otherwise we'll perform a search trying to
+                 figure out the right directory. It's better to add it explicite IMHO.
+               -->
+               <dotGitDirectory>${project.basedir}/.git</dotGitDirectory>
 
-                   <!-- false is default here, it prints some more information during the build -->
-                   <verbose>true</verbose>
+               <!-- false is default here, it prints some more information during the build -->
+               <verbose>true</verbose>
 
-               </configuration>
-           </plugin>
-           <plugin>
-              <groupId>com.google.code.maven-replacer-plugin</groupId>
-              <artifactId>maven-replacer-plugin</artifactId>
-              <version>1.4.1</version>
-              <executions>
-                  <execution>
-                      <phase>process-sources</phase>
-                      <goals>
-                          <goal>replace</goal>
-                      </goals>
-                  </execution>
-              </executions>
-              <configuration>
-                  <file>src/main/templates/org/jboss/pnc/bifrost/constants/BuildInformationConstants.java</file>
-                  <outputFile>src/main/java/org/jboss/pnc/bifrost/constants/BuildInformationConstants.java</outputFile>
-                  <replacements>
-                      <replacement>
-                          <token>@version@</token>
-                          <value>${project.version}</value>
-                      </replacement>
-                      <replacement>
-                          <token>@commit-id@</token>
-                          <value>${git.commit.id.abbrev}</value>
-                      </replacement>
-                      <replacement>
-                          <token>@build-time@</token>
-                          <value>${maven.build.timestamp}</value>
-                      </replacement>
-                  </replacements>
-              </configuration>
-          </plugin>
+           </configuration>
+       </plugin>
+       <plugin>
+          <groupId>com.google.code.maven-replacer-plugin</groupId>
+          <artifactId>maven-replacer-plugin</artifactId>
+          <version>1.4.1</version>
+          <executions>
+              <execution>
+                  <phase>process-sources</phase>
+                  <goals>
+                      <goal>replace</goal>
+                  </goals>
+              </execution>
+          </executions>
+          <configuration>
+              <file>src/main/templates/org/jboss/pnc/bifrost/constants/BuildInformationConstants.java</file>
+              <outputFile>src/main/java/org/jboss/pnc/bifrost/constants/BuildInformationConstants.java</outputFile>
+              <replacements>
+                  <replacement>
+                      <token>@version@</token>
+                      <value>${project.version}</value>
+                  </replacement>
+                  <replacement>
+                      <token>@commit-id@</token>
+                      <value>${git.commit.id.abbrev}</value>
+                  </replacement>
+                  <replacement>
+                      <token>@build-time@</token>
+                      <value>${maven.build.timestamp}</value>
+                  </replacement>
+              </replacements>
+          </configuration>
+      </plugin>
     </plugins>
   </build>
   <profiles>
